Update output documentation

--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
                 <div class="coll_name item_arrow">&#91;Unix/Tools&#93;&nbsp;&#58;&nbsp;</div>
                 <div class="coll_list">
                   <a href="./client/Unix.GitCMD.html">GitCMD</a>&nbsp;&#47;&nbsp;
-                  <a href="./client/Unix.MSSHkey.html">MultipleSshKey</a>
+                  <a href="./client/Unix.MSSHkey.html">MultipleSshKey</a>&nbsp;&#47;&nbsp;
+                  <a href="./client/Unix.TerminalMultiplexer.html">TerminalMultiplexer</a>
                 </div>
               </div>
           </li>  
@@ -247,7 +248,7 @@
         </p>
       </div> <!-- end footer-left -->
       <div class="footer-right">
-        <p>Page Updated 2019-08-29 23:48:13</p>
+        <p>Page Updated 2019-08-30 10:54:05</p>
       </div> <!-- end footer-right -->
     </div>
 
