--- a/ops/OpsMon.Cacti.html
+++ b/ops/OpsMon.Cacti.html
@@ -139,6 +139,8 @@
 <p><strong>5.Add host</strong></p>
 <p>Devices -&gt; Graph Templates -&gt; create -&gt; add host -&gt; Create Graphs For This Host -&gt; Create</p>
 <p><img alt="" src="https://raw.githubusercontent.com/uxun/img/master/imgs/662ea7bb-a315-4ac4-8428-3b8f420bc99e.jpg" /></p>
+<h3 id="refernece">REFERNECE</h3>
+<p><a href="https://docs.cacti.net/">deploy</a></p>
   
 </div>
     </div>
@@ -151,7 +153,7 @@
         </p>
       </div> <!-- end footer-left -->
       <div class="footer-right">
-        <p>Page Updated 2019-08-29 23:48:13</p>
+        <p>Page Updated 2019-08-30 10:54:05</p>
       </div> <!-- end footer-right -->
     </div>
 
