Update output documentation

--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
               <div class="list_wrapper">
                 <div class="coll_name item_arrow">&#91;Editor&#93;&nbsp;&#58;&nbsp;</div>
                 <div class="coll_list">
-                  <a href="./client/Editor.AtomOsx.html">Atom</a>
+                  <a href="./client/Editor.AtomOsx.html">Atom</a>&nbsp;&#47;&nbsp;
+                  <a href="./client/Editor.VScode.html">VScode</a>
                 </div>
               </div>
           </li>  
@@ -52,7 +53,7 @@
               <div class="list_wrapper">
                 <div class="coll_name item_arrow">&#91;Mac/Tools&#93;&nbsp;&#58;&nbsp;</div>
                 <div class="coll_list">
-                  <a href="./client/Mac.ModifyAppL.html">MacModifyAppL</a>&nbsp;&#47;&nbsp;
+                  <a href="./client/Mac.ModifyAppS.html">MacModifyAppS</a>&nbsp;&#47;&nbsp;
                   <a href="./client/Mac.UpgradeSystem.html">MacUpgradeSystem</a>&nbsp;&#47;&nbsp;
                   <a href="./client/Mac.Vagrant.html">Vagrant</a>
                 </div>
@@ -248,7 +249,7 @@
         </p>
       </div> <!-- end footer-left -->
       <div class="footer-right">
-        <p>Page Updated 2019-08-30 10:54:05</p>
+        <p>Page Updated 2019-09-03 11:06:04</p>
       </div> <!-- end footer-right -->
     </div>
 
