Update output documentation

--- a/index.html
+++ b/index.html
@@ -105,6 +105,14 @@
           </li>  
           <li class="pagelist">
               <div class="list_wrapper">
+                <div class="coll_name item_arrow">&#91;WebServer/Openresty&#93;&nbsp;&#58;&nbsp;</div>
+                <div class="coll_list">
+                  <a href="./ops/2019-08-20-OpenrestyConcept.html">OpenrestyConcept</a>
+                </div>
+              </div>
+          </li>  
+          <li class="pagelist">
+              <div class="list_wrapper">
                 <div class="coll_name item_arrow">&#91;Monitoring/Smokeping&#93;&nbsp;&#58;&nbsp;</div>
                 <div class="coll_list">
                   <a href="./ops/OpsMon.SmokepingAlerts.html">SomokepingAlerts</a>
@@ -116,6 +124,14 @@
                 <div class="coll_name item_arrow">&#91;Sniffers/Tcpdump&#93;&nbsp;&#58;&nbsp;</div>
                 <div class="coll_list">
                   <a href="./ops/OpsSniffers.Tcpdump.html">tcpdump</a>
+                </div>
+              </div>
+          </li>  
+          <li class="pagelist">
+              <div class="list_wrapper">
+                <div class="coll_name item_arrow">&#91;Ops/Test&#93;&nbsp;&#58;&nbsp;</div>
+                <div class="coll_list">
+                  <a href="./ops/OpsTest.html">TestNetwork</a>
                 </div>
               </div>
           </li>
@@ -246,6 +262,26 @@
       </div> <!-- end category_list -->
     </div> <!-- end category -->
     <div class="clearfix"></div>
+      
+    <div class="category">
+      <div class="category_name">
+        <h2 id="web">Web
+        </h2>
+      </div>
+      <div class="category_list">
+        <ul>  
+          <li class="pagelist">
+              <div class="list_wrapper">
+                <div class="coll_name item_arrow">&#91;WebServer/Openresty&#93;&nbsp;&#58;&nbsp;</div>
+                <div class="coll_list">
+                  <a href="./web/WebServer.Openresy.html">Openresty</a>
+                </div>
+              </div>
+          </li>
+        </ul>
+      </div> <!-- end category_list -->
+    </div> <!-- end category -->
+    <div class="clearfix"></div>
   </div> <!-- end category_item -->
     </div>
     <div id="footer">
@@ -257,7 +293,7 @@
         </p>
       </div> <!-- end footer-left -->
       <div class="footer-right">
-        <p>Page Updated 2019-09-04 12:29:23</p>
+        <p>Page Updated 2019-09-07 09:55:40</p>
       </div> <!-- end footer-right -->
     </div>
 
