Update output documentation

--- a/index.html
+++ b/index.html
@@ -105,14 +105,6 @@
           </li>  
           <li class="pagelist">
               <div class="list_wrapper">
-                <div class="coll_name item_arrow">&#91;WebServer/Openresty&#93;&nbsp;&#58;&nbsp;</div>
-                <div class="coll_list">
-                  <a href="./ops/2019-08-20-OpenrestyConcept.html">OpenrestyConcept</a>
-                </div>
-              </div>
-          </li>  
-          <li class="pagelist">
-              <div class="list_wrapper">
                 <div class="coll_name item_arrow">&#91;Monitoring/Smokeping&#93;&nbsp;&#58;&nbsp;</div>
                 <div class="coll_list">
                   <a href="./ops/OpsMon.SmokepingAlerts.html">SomokepingAlerts</a>
@@ -251,6 +243,16 @@
           </li>  
           <li class="pagelist">
               <div class="list_wrapper">
+                <div class="coll_name item_arrow">&#91;Storage/Redis&#93;&nbsp;&#58;&nbsp;</div>
+                <div class="coll_list">
+                  <a href="./storage/Storage.RedisCmd.html">RedisCMD</a>&nbsp;&#47;&nbsp;
+                  <a href="./storage/Storage.RedisConcept.html">RedisConcept</a>&nbsp;&#47;&nbsp;
+                  <a href="./storage/Storage.RedisDeploy.html">RedisDeploy</a>
+                </div>
+              </div>
+          </li>  
+          <li class="pagelist">
+              <div class="list_wrapper">
                 <div class="coll_name item_arrow">&#91;Storage/Filesystem&#93;&nbsp;&#58;&nbsp;</div>
                 <div class="coll_list">
                   <a href="./storage/Storage.RsyncOs.html">RsyncOs</a>&nbsp;&#47;&nbsp;
@@ -293,7 +295,7 @@
         </p>
       </div> <!-- end footer-left -->
       <div class="footer-right">
-        <p>Page Updated 2019-09-07 09:55:40</p>
+        <p>Page Updated 2019-09-09 14:46:55</p>
       </div> <!-- end footer-right -->
     </div>
 
