Update output documentation

--- a/index.html
+++ b/index.html
@@ -81,6 +81,16 @@
         <ul>  
           <li class="pagelist">
               <div class="list_wrapper">
+                <div class="coll_name item_arrow">&#91;Ops/Ansible&#93;&nbsp;&#58;&nbsp;</div>
+                <div class="coll_list">
+                  <a href="./ops/Ops.AnsibleDeploy.html">AnsibleDeploy</a>&nbsp;&#47;&nbsp;
+                  <a href="./ops/Ops.AnsibleModule.html">AnsibleModule</a>&nbsp;&#47;&nbsp;
+                  <a href="./ops/Ops.AnsiblePlaybookConcept.html">AnsiblePlaybookConcept</a>
+                </div>
+              </div>
+          </li>  
+          <li class="pagelist">
+              <div class="list_wrapper">
                 <div class="coll_name item_arrow">&#91;Monitoring/Cacti&#93;&nbsp;&#58;&nbsp;</div>
                 <div class="coll_list">
                   <a href="./ops/OpsMon.Cacti.html">Cacti</a>
@@ -295,7 +305,7 @@
         </p>
       </div> <!-- end footer-left -->
       <div class="footer-right">
-        <p>Page Updated 2019-09-09 14:46:55</p>
+        <p>Page Updated 2019-09-09 21:53:24</p>
       </div> <!-- end footer-right -->
     </div>
 
