--- a/ops/Ops.AnsibleModule.html
+++ b/ops/Ops.AnsibleModule.html
@@ -77,6 +77,8 @@
 </blockquote>
 <div class="hlcode"><pre><span class="cp"># setup 模块</span>
 <span class="n">ansible</span> <span class="n">all</span> <span class="o">-</span><span class="n">m</span> <span class="n">setup</span>
+<span class="cp"># filter</span>
+<span class="n">ansible</span> <span class="n">one</span> <span class="o">-</span><span class="n">m</span> <span class="n">setup</span> <span class="o">-</span><span class="n">a</span> <span class="err">&#39;</span><span class="n">filter</span><span class="o">=</span><span class="n">ansible_all_ipv4_addresses</span><span class="err">&#39;</span>
 </pre></div>
 
 
@@ -326,7 +328,7 @@
         </p>
       </div> <!-- end footer-left -->
       <div class="footer-right">
-        <p>Page Updated 2019-09-09 21:53:24</p>
+        <p>Page Updated 2019-09-11 10:06:50</p>
       </div> <!-- end footer-right -->
     </div>
 
