Update output documentation

--- a/index.html
+++ b/index.html
@@ -74,6 +74,28 @@
       
     <div class="category">
       <div class="category_name">
+        <h2 id="net">Net
+        </h2>
+      </div>
+      <div class="category_list">
+        <ul>  
+          <li class="pagelist">
+              <div class="list_wrapper">
+                <div class="coll_name item_arrow">&#91;Net/VPN&#93;&nbsp;&#58;&nbsp;</div>
+                <div class="coll_list">
+                  <a href="./net/Net.VPNOpenVPN.html">OpenVPN</a>&nbsp;&#47;&nbsp;
+                  <a href="./net/Net.VPNTunSafe.html">TunSafe</a>&nbsp;&#47;&nbsp;
+                  <a href="./net/Net.VPNWireguard.html">WireguardVPN</a>
+                </div>
+              </div>
+          </li>
+        </ul>
+      </div> <!-- end category_list -->
+    </div> <!-- end category -->
+    <div class="clearfix"></div>
+      
+    <div class="category">
+      <div class="category_name">
         <h2 id="ops">Ops
         </h2>
       </div>
@@ -239,17 +261,18 @@
           </li>  
           <li class="pagelist">
               <div class="list_wrapper">
-                <div class="coll_name item_arrow">&#91;Storage/Mysql&#93;&nbsp;&#58;&nbsp;</div>
+                <div class="coll_name item_arrow">&#91;Storage/Disk&#93;&nbsp;&#58;&nbsp;</div>
                 <div class="coll_list">
-                  <a href="./storage/Storage.MysqlDeploy.html">MysqlDeploy</a>
+                  <a href="./storage/Storage.DiskLvm.html">Lvm</a>&nbsp;&#47;&nbsp;
+                  <a href="./storage/Storage.DiskParted.html">Parted</a>
                 </div>
               </div>
           </li>  
           <li class="pagelist">
               <div class="list_wrapper">
-                <div class="coll_name item_arrow">&#91;Storage/Disk&#93;&nbsp;&#58;&nbsp;</div>
+                <div class="coll_name item_arrow">&#91;Storage/Mysql&#93;&nbsp;&#58;&nbsp;</div>
                 <div class="coll_list">
-                  <a href="./storage/Storage.DiskParted.html">Parted</a>
+                  <a href="./storage/Storage.MysqlDeploy.html">MysqlDeploy</a>
                 </div>
               </div>
           </li>  
@@ -307,7 +330,7 @@
         </p>
       </div> <!-- end footer-left -->
       <div class="footer-right">
-        <p>Page Updated 2019-09-11 10:06:50</p>
+        <p>Page Updated 2019-09-13 17:35:04</p>
       </div> <!-- end footer-right -->
     </div>
 
