Update output documentation

--- a/index.html
+++ b/index.html
@@ -223,7 +223,8 @@
               <div class="list_wrapper">
                 <div class="coll_name item_arrow">&#91;Linux/Init&#93;&nbsp;&#58;&nbsp;</div>
                 <div class="coll_list">
-                  <a href="./os/Linux.RenameNIC.html">RenameNIC</a>
+                  <a href="./os/Linux.RenameNIC.html">RenameNIC</a>&nbsp;&#47;&nbsp;
+                  <a href="./os/Linux.initVPS.html">VPS</a>
                 </div>
               </div>
           </li>  
@@ -330,7 +331,7 @@
         </p>
       </div> <!-- end footer-left -->
       <div class="footer-right">
-        <p>Page Updated 2019-09-13 17:35:04</p>
+        <p>Page Updated 2019-09-16 21:02:23</p>
       </div> <!-- end footer-right -->
     </div>
 
