Update output documentation

--- a/client/Mac.UpgradeSystem.html
+++ b/client/Mac.UpgradeSystem.html
@@ -20,7 +20,7 @@
   <div id="post-nav">
     <a href="/wiki/">Uxun's WIKI</a>
     &nbsp;&#187;&nbsp;
-    <a href="/wiki/#../../../Dropbox/wiki/client">../../../Dropbox/wiki/client</a>
+    <a href="/wiki/#client">client</a>
     &nbsp;&#187;&nbsp;MacUpgradeSystem
     <span class="updated">Page Updated&nbsp;
     2019-08-21 13:00
@@ -112,7 +112,7 @@
         </p>
       </div> <!-- end footer-left -->
       <div class="footer-right">
-        <p>Page Updated 2019-09-16 21:02:23</p>
+        <p>Page Updated 2019-09-17 21:39:17</p>
       </div> <!-- end footer-right -->
     </div>
 
