--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       
     <div class="category">
       <div class="category_name">
-        <h2 id="net">Net
+        <h2 id="network">Network
         </h2>
       </div>
       <div class="category_list">
@@ -83,9 +83,9 @@
               <div class="list_wrapper">
                 <div class="coll_name item_arrow">&#91;Net/VPN&#93;&nbsp;&#58;&nbsp;</div>
                 <div class="coll_list">
-                  <a href="./net/Net.VPNOpenVPN.html">OpenVPN</a>&nbsp;&#47;&nbsp;
-                  <a href="./net/Net.VPNTunSafe.html">TunSafe</a>&nbsp;&#47;&nbsp;
-                  <a href="./net/Net.VPNWireguard.html">WireguardVPN</a>
+                  <a href="./network/Net.VPNOpenVPN.html">OpenVPN</a>&nbsp;&#47;&nbsp;
+                  <a href="./network/Net.VPNTunSafe.html">TunSafe</a>&nbsp;&#47;&nbsp;
+                  <a href="./network/Net.VPNWireguard.html">WireguardVPN</a>
                 </div>
               </div>
           </li>
@@ -315,6 +315,14 @@
                   <a href="./web/WebServer.Openresy.html">Openresty</a>
                 </div>
               </div>
+          </li>  
+          <li class="pagelist">
+              <div class="list_wrapper">
+                <div class="coll_name item_arrow">&#91;WebServer/Nginx&#93;&nbsp;&#58;&nbsp;</div>
+                <div class="coll_list">
+                  <a href="./web/WebServer.NginxAuth.html">WebAuth</a>
+                </div>
+              </div>
           </li>
         </ul>
       </div> <!-- end category_list -->
@@ -331,7 +339,7 @@
         </p>
       </div> <!-- end footer-left -->
       <div class="footer-right">
-        <p>Page Updated 2019-09-16 21:02:23</p>
+        <p>Page Updated 2019-09-17 21:39:17</p>
       </div> <!-- end footer-right -->
     </div>
 
