--- a/network/Net.VPNOpenVPN.html
+++ b/network/Net.VPNOpenVPN.html
@@ -20,7 +20,7 @@
   <div id="post-nav">
     <a href="/wiki/">Uxun's WIKI</a>
     &nbsp;&#187;&nbsp;
-    <a href="/wiki/#../../../Dropbox/wiki/net">../../../Dropbox/wiki/net</a>
+    <a href="/wiki/#network">network</a>
     &nbsp;&#187;&nbsp;OpenVPN
     <span class="updated">Page Updated&nbsp;
     
@@ -541,7 +541,7 @@ su <span class="cp">${</span><span class="n">NAME_CLIENT</span><span class="cp">
         </p>
       </div> <!-- end footer-left -->
       <div class="footer-right">
-        <p>Page Updated 2019-09-16 21:02:23</p>
+        <p>Page Updated 2019-09-17 21:39:17</p>
       </div> <!-- end footer-right -->
     </div>
 
