--- a/ops/Ops.AnsibleModule.html
+++ b/ops/Ops.AnsibleModule.html
@@ -20,7 +20,7 @@
   <div id="post-nav">
     <a href="/wiki/">Uxun's WIKI</a>
     &nbsp;&#187;&nbsp;
-    <a href="/wiki/#../../../Dropbox/wiki/ops">../../../Dropbox/wiki/ops</a>
+    <a href="/wiki/#ops">ops</a>
     &nbsp;&#187;&nbsp;AnsibleModule
     <span class="updated">Page Updated&nbsp;
     2019-08-20 13:00
@@ -328,7 +328,7 @@
         </p>
       </div> <!-- end footer-left -->
       <div class="footer-right">
-        <p>Page Updated 2019-09-16 21:02:23</p>
+        <p>Page Updated 2019-09-17 21:39:17</p>
       </div> <!-- end footer-right -->
     </div>
 
