--- a/os/Virtual.Proxmox.html
+++ b/os/Virtual.Proxmox.html
@@ -20,7 +20,7 @@
   <div id="post-nav">
     <a href="/wiki/">Uxun's WIKI</a>
     &nbsp;&#187;&nbsp;
-    <a href="/wiki/#../../../Dropbox/wiki/os">../../../Dropbox/wiki/os</a>
+    <a href="/wiki/#os">os</a>
     &nbsp;&#187;&nbsp;Proxmox
     <span class="updated">Page Updated&nbsp;
     2019-08-21 13:00
@@ -596,7 +596,7 @@ rm -f /var/log/tuned/tuned.logroot
         </p>
       </div> <!-- end footer-left -->
       <div class="footer-right">
-        <p>Page Updated 2019-09-16 21:02:23</p>
+        <p>Page Updated 2019-09-17 21:39:17</p>
       </div> <!-- end footer-right -->
     </div>
 
