--- a/storage/Storage.CephCluster.html
+++ b/storage/Storage.CephCluster.html
@@ -20,7 +20,7 @@
   <div id="post-nav">
     <a href="/wiki/">Uxun's WIKI</a>
     &nbsp;&#187;&nbsp;
-    <a href="/wiki/#../../../Dropbox/wiki/storage">../../../Dropbox/wiki/storage</a>
+    <a href="/wiki/#storage">storage</a>
     &nbsp;&#187;&nbsp;CephCluster
     <span class="updated">Page Updated&nbsp;
     2019-08-20 00:00
@@ -399,7 +399,7 @@ ceph.conf  ceph-deploy-ceph.log ceph.mon.keyring
         </p>
       </div> <!-- end footer-left -->
       <div class="footer-right">
-        <p>Page Updated 2019-09-16 21:02:23</p>
+        <p>Page Updated 2019-09-17 21:39:17</p>
       </div> <!-- end footer-right -->
     </div>
 
