--- a/web/WebServer.Openresy.html
+++ b/web/WebServer.Openresy.html
@@ -20,7 +20,7 @@
   <div id="post-nav">
     <a href="/wiki/">Uxun's WIKI</a>
     &nbsp;&#187;&nbsp;
-    <a href="/wiki/#../../../Dropbox/wiki/web">../../../Dropbox/wiki/web</a>
+    <a href="/wiki/#web">web</a>
     &nbsp;&#187;&nbsp;Openresty
     <span class="updated">Page Updated&nbsp;
     2019-08-21 13:00
@@ -385,7 +385,7 @@ do_reload<span class="o">()</span> <span class="o">{</span>
         </p>
       </div> <!-- end footer-left -->
       <div class="footer-right">
-        <p>Page Updated 2019-09-16 21:02:23</p>
+        <p>Page Updated 2019-09-17 21:39:17</p>
       </div> <!-- end footer-right -->
     </div>
 
