--- a/network/Net.VPNWireguard.html
+++ b/network/Net.VPNWireguard.html
@@ -20,7 +20,7 @@
   <div id="post-nav">
     <a href="/wiki/">Uxun's WIKI</a>
     &nbsp;&#187;&nbsp;
-    <a href="/wiki/#../../../Dropbox/wiki/net">../../../Dropbox/wiki/net</a>
+    <a href="/wiki/#network">network</a>
     &nbsp;&#187;&nbsp;WireguardVPN
     <span class="updated">Page Updated&nbsp;
     
@@ -237,7 +237,7 @@ ip link <span class="nb">set </span>up dev wg0
         </p>
       </div> <!-- end footer-left -->
       <div class="footer-right">
-        <p>Page Updated 2019-09-16 21:02:23</p>
+        <p>Page Updated 2019-09-17 21:39:17</p>
       </div> <!-- end footer-right -->
     </div>
 
