--- a/os/Container.DockerInstall.html
+++ b/os/Container.DockerInstall.html
@@ -20,7 +20,7 @@
   <div id="post-nav">
     <a href="/wiki/">Uxun's WIKI</a>
     &nbsp;&#187;&nbsp;
-    <a href="/wiki/#../../../Dropbox/wiki/os">../../../Dropbox/wiki/os</a>
+    <a href="/wiki/#os">os</a>
     &nbsp;&#187;&nbsp;DockerInstall
     <span class="updated">Page Updated&nbsp;
     2019-08-02 00:00
@@ -150,7 +150,7 @@ Github https://github.com/docker/compose/releases<br />
         </p>
       </div> <!-- end footer-left -->
       <div class="footer-right">
-        <p>Page Updated 2019-09-16 21:02:23</p>
+        <p>Page Updated 2019-09-17 21:39:17</p>
       </div> <!-- end footer-right -->
     </div>
 
