--- a/os/Linux.initVPS.html
+++ b/os/Linux.initVPS.html
@@ -20,7 +20,7 @@
   <div id="post-nav">
     <a href="/wiki/">Uxun's WIKI</a>
     &nbsp;&#187;&nbsp;
-    <a href="/wiki/#../../../Dropbox/wiki/os">../../../Dropbox/wiki/os</a>
+    <a href="/wiki/#os">os</a>
     &nbsp;&#187;&nbsp;VPS
     <span class="updated">Page Updated&nbsp;
     
@@ -343,7 +343,7 @@
         </p>
       </div> <!-- end footer-left -->
       <div class="footer-right">
-        <p>Page Updated 2019-09-16 21:02:23</p>
+        <p>Page Updated 2019-09-17 21:39:17</p>
       </div> <!-- end footer-right -->
     </div>
 
