--- a/os/Tools.Supervisor.html
+++ b/os/Tools.Supervisor.html
@@ -20,7 +20,7 @@
   <div id="post-nav">
     <a href="/wiki/">Uxun's WIKI</a>
     &nbsp;&#187;&nbsp;
-    <a href="/wiki/#../../../Dropbox/wiki/os">../../../Dropbox/wiki/os</a>
+    <a href="/wiki/#os">os</a>
     &nbsp;&#187;&nbsp;Supervisor
     <span class="updated">Page Updated&nbsp;
     2019-08-20 00:00
@@ -228,7 +228,7 @@ stop<span class="o">()</span> <span class="o">{</span>
         </p>
       </div> <!-- end footer-left -->
       <div class="footer-right">
-        <p>Page Updated 2019-09-16 21:02:23</p>
+        <p>Page Updated 2019-09-17 21:39:17</p>
       </div> <!-- end footer-right -->
     </div>
 
