--- a/storage/Storage.DiskParted.html
+++ b/storage/Storage.DiskParted.html
@@ -20,7 +20,7 @@
   <div id="post-nav">
     <a href="/wiki/">Uxun's WIKI</a>
     &nbsp;&#187;&nbsp;
-    <a href="/wiki/#../../../Dropbox/wiki/storage">../../../Dropbox/wiki/storage</a>
+    <a href="/wiki/#storage">storage</a>
     &nbsp;&#187;&nbsp;Parted
     <span class="updated">Page Updated&nbsp;
     None
@@ -140,7 +140,7 @@
         </p>
       </div> <!-- end footer-left -->
       <div class="footer-right">
-        <p>Page Updated 2019-09-16 21:02:23</p>
+        <p>Page Updated 2019-09-17 21:39:17</p>
       </div> <!-- end footer-right -->
     </div>
 
