Update output documentation

--- a/index.html
+++ b/index.html
@@ -312,7 +312,8 @@
               <div class="list_wrapper">
                 <div class="coll_name item_arrow">&#91;WebServer/Openresty&#93;&nbsp;&#58;&nbsp;</div>
                 <div class="coll_list">
-                  <a href="./web/WebServer.Openresy.html">Openresty</a>
+                  <a href="./web/WebServer.Openresy.html">Openresty</a>&nbsp;&#47;&nbsp;
+                  <a href="./web/WebServer.OpenrestyWAF.html">OpenrestyWAF</a>
                 </div>
               </div>
           </li>  
@@ -339,7 +340,7 @@
         </p>
       </div> <!-- end footer-left -->
       <div class="footer-right">
-        <p>Page Updated 2019-09-17 21:39:17</p>
+        <p>Page Updated 2019-09-18 22:14:15</p>
       </div> <!-- end footer-right -->
     </div>
 
